--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head> 
 <body> 
-<h2 style="text-align: center"> FORM VALIDATION</h2>           
-<form name="RegForm" action="/" onsubmit="return formValidate()" method="post">  
-    <p>Name : <input type="text" name="Name"></p>
-     <label class="alert" id="name"></label><br>  
+<h2 style="text-align: center"> FORM VALIDATION</h2>
+<div>           
+    <p>Name : <input type="text" name="Name" id = "n1"></p>
+     <label class="alert" id="r1"></label><br>  
 
-    <p> Address : <input type="text" name="Address">  </p>
-     <label class="alert" id="address"></label><br> 
+    <p> Address : <input type="text" name="Address" id = "n2">  </p>
+     <label class="alert" id="r2"></label><br> 
 
-    <p>E-mail : <input type="text"  name="EMail"></p>
-     <label class="alert" id="email"></label><br> 
+    <p>E-mail : <input type="text"  name="EMail" id = "n3"></p>
+     <label class="alert" id="r3"></label><br> 
 
-    <p>Password : <input type="password" name="Password"> </p>
-    <label class="alert" id="pwd"></label><br> <br> 
+    <p>Password : <input type="password" name="Password" id = "n4"> </p>
+    <label class="alert" id="r4"></label><br> <br> 
 
-    <p>Confirm Password : <input type="password" name="cPassword"> </p>
-    <label class="alert" id="cpwd"></label><br> <br>
+    <p>Confirm Password : <input type="password" name="cPassword" id = "n5"> </p>
+    <label class="alert" id="r5"></label><br> <br>
 
-    <p>Phone : <input type="number" name="phone"> </p>
-    <label class="alert" id="phone"></label><br> <br>   
+    <p>Phone : <input type="number" name="phone" id = "n6"> </p>
+    <label class="alert" id="r6"></label><br> <br>   
 
-    <p><input type="submit" value="Check" name="Submit"></p><br>   
-
-</form> 
+    <button onclick="check()">check</button> 
+    <script src="app.js"></script>
+</div>
 </body> 
 </html>
